objects/Advisory_Com_Visit__c.object
<CustomObject>
    <description>Stores Advisory.com Login History by quarter.</description>
    <fields>
        <fullName>Advisory_Com_Visits__c</fullName>
        <description>Updated based on a change to the Advisory.com Last Access date/time field on Contact</description>
        <inlineHelpText>Total number of logins for this user and quarter</inlineHelpText>
        <label># Advisory.com Visits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Advisory_com_User_Id__c</fullName>
        <description>Created as part of CR-4357. Automatically updated via coding (AdvUtils)</description>
        <inlineHelpText>User&apos;s Advisory.com User Id at the time of first access in the quarter</inlineHelpText>
        <label>Advisory.com User Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Advisory.com Visits</relationshipLabel>
        <relationshipName>Advisory_com_Visits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Data_Quality__c</fullName>
        <formula>IF(OR(
ISBLANK(Advisory_com_User_Id__c),Advisory_com_User_Id__c !=  Site_Profile__r.User_Id__c ), &apos;Compromised&apos;,&apos;Valid&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Relative data quality determined by comparing Advisory.com User Id to value on related Contact</inlineHelpText>
        <label>Data Quality</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <description>CR-3463</description>
        <formula>TEXT( YEAR( Start_of_Quarter__c ) ) &amp; &quot; Q&quot; &amp; TEXT( CEILING(Month( Start_of_Quarter__c ) / 3) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quarter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site Profile</label>
        <referenceTo>Site_Profile__c</referenceTo>
        <relationshipLabel>Advisory.com Visits</relationshipLabel>
        <relationshipName>Advisory_com_Visits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_of_Quarter__c</fullName>
        <label>Start of Quarter</label>
        <type>Date</type>
    </fields>
    <label>Advisory.com Visit</label>
    <nameField>
        <displayFormat>AV-{00000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Advisory.com Visits</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Prevent_Change_to_Advisorycom_Contact</fullName>
        <active>true</active>
        <description>Do not allow the Contact association to be changed on the record, unless changed by a System Admin</description>
        <errorConditionFormula>AND(
NOT(ISNEW()),
ISCHANGED(Contact__c),
$User.ProfileId  &lt;&gt; &apos;00eC00000016HQP&apos; /* Sys Admin */
)</errorConditionFormula>
        <errorMessage>Your profile cannot change the Contact on this record.</errorMessage>
    </validationRules>
</CustomObject>